--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="root">
       <ul>
-        <li><a href="./gridentio_new/index.html">Modified GridentIO</a></li>
+        <li><a href="./gridentify_new/index.html">Modified Gridentfy</a></li>
       </ul>
     </div>
 </html>
